[package]
name = "mqtt-healthchecker-rs"
version = "0.1.1"
authors = ["Yusuke Sato <yusuke1.sato9.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
paho-mqtt = "0.10"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
