[package]
name = "mqtt-healthchecker-rs"
version = "0.1.4"
authors = ["Yusuke Sato <yusuke1.sato9.git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["env"] }
paho-mqtt = "0.11"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
